testsuite/tests/parser/should_fail/T15730.stderr

T15730.hs:3:27: error: parse error on input ‘/’
